--- a/positioning/exercise2c.html
+++ b/positioning/exercise2c.html
@@ -3,10 +3,24 @@
 <head>
     <title>Exercise #2c: Positioning</title>
     <style>
-        /* add CSS here */
+
+       #banner {background-image :url(b.gif);
+                right:20px; 
+                top:20px;
+                 width:120px;
+                 height:480Px;
+               border:1px solid black;
+              position: absolute;
+   
+
+                 }
+ 
+              
+ 
     </style>
 </head>
 <body>
+<div id="banner" ></div>
 <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum purus a justo pellentesque, quis
     varius arcu scelerisque. Nam porta odio et orci placerat venenatis. Aliquam suscipit auctor ex ut viverra. In hac
@@ -46,12 +60,13 @@
     gravida turpis sed bibendum scelerisque.
 </p>
 
-<p>
+<p> 
+
     Morbi commodo bibendum mattis. Vivamus commodo ex felis, quis dictum quam molestie quis. Mauris nunc felis, sagittis
     vel massa id, sodales congue nunc. Maecenas tempor nulla diam, ac fermentum purus fringilla id. Lorem ipsum dolor
     sit amet, consectetur adipiscing elit. Nullam feugiat pulvinar ornare. Etiam non gravida eros.
 </p>
 
-<div id="banner"></div>
+
 </body>
 </html>
