--- a/properties/exercise3.html
+++ b/properties/exercise3.html
@@ -2,24 +2,52 @@
 <html>
 <head>
     <title>Exercise #3: Styling source code</title>
+<style>
+a:link {
+  color: #0033cc;
+  text-decoration: none;
+}
+
+/* visited link */
+a:visited {
+  color: #0033cc;
+  text-decoration: none;
+}
+
+/* mouse over link */
+a:hover {text-decoration: underline;
+  color:#0033cc;
+}
+
+/* selected link */
+a:active {
+  color: #0033cc;
+  text-decoration: none;
+}
+</style>
 </head>
+
 <body>
 
 <p>Code snippet 1:</p>
-<pre>
-h1 {
-    font-family: Verdana;
-    font-size: 1.2em;
-}
+<pre> 
+
+
+<a href="https://www.w3schools.com/">
+<span style="color: black ; font-weight:bold">  h1 { </span>
+    <span style="color: #0033cc; font-weight:bold">font-family </span><span style="color: black ; font-weight:bold">: </span> <span style="color:green ; font-weight:bold">Verdana</span><span style="color: black ; font-weight:bold">;</span>
+    <span style="color: #0033cc; font-weight:bold"> font-size </span> <span style="color: black ; font-weight:bold">: </span><span style="color: green ; font-weight:bold">1.2em</span><span style="color: black ; font-weight:bold">;
+}</span></a>
 </pre>
 
-<p>Code snippet 2:</p>
-<pre>
-p {
-    font-family: Arial;
-    color: blue;
-    text-align: right;
-}
+<p>Cod<a>e snippet 2:</p>
+<pre> 
+<a href="https://www.w3schools.com/">
+<span style="color: black ; font-weight:bold">p {</span>
+   <span style="color: #0033cc; font-weight:bold"> font-family </span> <span style="color: black ; font-weight:bold">:</span><span style="color: green ; font-weight:bold"> Arial</span><span style="color: black ; font-weight:bold">;</span>
+  <span style="color: #0033cc; font-weight:bold">  color </span><span style="color: black ; font-weight:bold">:</span><span style="color: green ; font-weight:bold"> blue</span><span style="color: black ; font-weight:bold">;</span>
+   <span style="color: #0033cc ;font-weight:bold"> text-align</span> <span style="color: black ; font-weight:bold">: </span><span style="color: green ; font-weight:bold">right</span> <span style="color: black ; font-weight:bold">;
+}</span></a>
 </pre>
 
 </body>
