--- a/positioning/exercise2a.html
+++ b/positioning/exercise2a.html
@@ -12,7 +12,11 @@
             border: 1px solid black;
         }
 
-        /* add CSS here */
+.odd{ position: relative;
+top:10px;}
+.even{ position: relative;
+       bottom:10px;}
+
     </style>
 </head>
 <body>
