--- a/positioning/exercise3.html
+++ b/positioning/exercise3.html
@@ -4,10 +4,23 @@
     <title>Exercise #3: Floating articles</title>
     <style>
         body {
-            background-color: #cccccc;
+            background-color: #cccccc;width:100%;
         }
 
-        /* add CSS here*/
+    article {background-color:#ccaaff; width:200px;height:100px; margin:10px; overflow: hidden ;  float: left;}
+
+.promo ::-webkit-scrollerbar{ display :none;}
+
+.promo {font-weight:bold;overflow:scroll; width:1500px;
+height:100px;
+border-top:2px solid red;
+border- bottom:2px solid red;
+padding-top:2px;
+padding-bottom:2px;
+clear:both;
+background-color:inherit}
+
+ 
     </style>
 </head>
 <body>
@@ -40,18 +53,20 @@
     gravida turpis sed bibendum scelerisque.
 </article>
 <article class="promo">
+<hr style="color:red;">
     Phasellus vitae pulvinar ipsum. Proin egestas lobortis mauris. Ut vel est vel nulla euismod pretium eu aliquet diam.
     Nulla ac auctor ante, volutpat pharetra nunc. Etiam nec nisl gravida, efficitur felis gravida, facilisis risus. Nunc
     augue sem, molestie ac congue at, auctor sit amet turpis. Nulla egestas ullamcorper auctor. Vestibulum ac volutpat
     lacus. Donec non magna non tellus volutpat fermentum. Ut nec sagittis orci. Aliquam pulvinar feugiat quam,
     vestibulum faucibus elit ultricies sed.
+<hr style="color:red;">
 </article>
-<article>
+<article class="a">
     Morbi commodo bibendum mattis. Vivamus commodo ex felis, quis dictum quam molestie quis. Mauris nunc felis, sagittis
     vel massa id, sodales congue nunc. Maecenas tempor nulla diam, ac fermentum purus fringilla id. Lorem ipsum dolor
     sit amet, consectetur adipiscing elit. Nullam feugiat pulvinar ornare. Etiam non gravida eros.
 </article>
-<article>
+<article class="a">
     Nullam eget lacus ex. Ut commodo dolor id odio mattis lacinia. Vestibulum varius, lectus non facilisis faucibus,
     magna ex porttitor nisl, sit amet ultricies nisl est elementum metus. Donec condimentum turpis et ligula vulputate,
     a ultricies nunc venenatis. Suspendisse efficitur metus a nunc consectetur, et dignissim elit porttitor. Curabitur
