--- a/properties/Exercise 4.html
+++ b/properties/Exercise 4.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
 <html>
 <head>
-    <title>Exercise #1: Page-level vs. inline CSS</title>
-    <style>
-        p {
-            color: blue;
-        }
-    </style>
+<style>
+p{ background-color:grey;}
+</style>
+
 </head>
 <body>
-<p style="font-size:14pt; ">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin lacinia lorem eu porttitor luctus. Sed ac mauris
+
+<p style="background-color:white; background-image: url('c.jpg');background-repeat: no-repeat;">
+
+
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin lacinia lorem eu porttitor luctus. Sed ac mauris
     vitae arcu consectetur tempor sed congue felis. Vivamus posuere scelerisque dapibus. Nam ultricies laoreet augue id
     semper. Sed eu lacus ac dolor volutpat ullamcorper at sed risus. Nunc sollicitudin bibendum varius. Donec laoreet
     gravida metus. Fusce porta consequat augue, eget fermentum lectus molestie ultrices. Etiam sit amet sem sed massa
@@ -20,14 +21,14 @@
     pellentesque rhoncus sed quam.
 </p>
 
-<p style="font-size:14pt; color:black;">
+<p>
     Etiam in ex quis eros hendrerit sollicitudin vitae iaculis neque. Vestibulum ornare nibh lectus, nec blandit justo
     efficitur in. Morbi et porta erat, quis tristique lorem. Nunc mollis egestas ligula, id iaculis mauris dapibus
     sagittis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus
     vestibulum non augue scelerisque tincidunt. Vivamus dictum luctus neque, sed scelerisque quam faucibus vitae.
 </p>
 
-<p style="font-size:14pt";>
+<p>
     Donec nec lacus et felis scelerisque iaculis a vitae nibh. Nullam in sapien condimentum erat interdum pretium eget
     sit amet ex. Duis sed enim nisl. Cras ut lacus vitae metus posuere vestibulum. Proin posuere tincidunt ipsum ut
     aliquam. Aenean lacinia urna mauris, quis volutpat nulla blandit et. Nam placerat porta ornare. Nunc pretium elit et
