--- a/selectors/exercise2.html
+++ b/selectors/exercise2.html
@@ -3,9 +3,9 @@
 <head>
     <title>Exercise #1: Boxes and spacing</title>
     <style>
-        body{ background-color: #f0f8ff;min-width:70%;}
-         div{ width:75%; border:1px solid #333333; background-color:white; padding: .5em;margin:16px;}
-          span{font-weight:bold; padding :0em 5em 0em5em;}
+        body{ background-color: #f0f8ff; }
+         div{ width:75%; border:1px solid #333333; background-color:white; padding: .5em;margin:16px;border-radius:5px;box-shadow: 10px 10px 5px grey;}
+          span{font-weight:bold; padding :0em 5em 0em5em; min-width:500px;}
 
 
 
@@ -31,7 +31,7 @@
     </p>
 </div>
 
-<div style=" border: dashed red; color:red;">
+<div style=" border: dashed red;box-shadow: 6px 5px 5px red;">
     <h2>News heading 2</h2>
 
     <p >
