--- a/selectors/exercise4.html
+++ b/selectors/exercise4.html
@@ -1,42 +1,32 @@
-<!DOCTYPE html>
 <html>
 <head>
-    <title>Exercise #4: Selectors</title>
+<title>Exercise #4: Selectors</title>
     <link rel="stylesheet" href="exercise4.css"/>
+
 </head>
 <body>
-<div>
-    <p>
-        There is some text <a href="#">with a link</a> in it.
-    </p>
 
-    <p>
-        Second paragraph with a <a href="#">link</a>.
-    </p>
+<div>
+<p>There is some text <a href="#">with alink in it</a>.</p>
+  <p>second paragraph with<a href="#"> alink </a>.</p>
 </div>
 <div>
-    <p>
-        Third paragraph (<a href="#">link</a> too, yes).
-    </p>
+ <p>Third paragraph (<a href="#">link</a> too,yes).</p>
 </div>
-
 <ul>
-    <li>First <a href="#">link</a></li>
-    <li>Second
-        <ul>
-            <li>111</li>
-            <li>222 <a href="#">link</a></li>
-            <li>333
-                <ul>
-                    <li>red</li>
-                    <li>green</li>
-                    <li>blue <a href="#">link</a></li>
-                </ul>
-            </li>
-        </ul>
-    </li>
-    <li>Third</li>
-    <li>Fourth</li>
+<li> First<a href="#"> Link </a></li>
+<li> second</li>
+<ul>
+<li>111</li>
+<li>222 <a href="#">link </a></li>
+<li>333</li>
+<ul>
+<li>red</li>
+<li>green</li>
+<li>blue <a href="#">link </a></li>
 </ul>
-</body>
-</html>
+</ul>
+<li> Third</li>
+<li> Fourth</li>
+</ul>
+    
